# ocm

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: OPENCLAW_RELEASE_SCENARIO_MATRIX.md  USAGE.md
scripts/: package-release.sh  prepare-release-assets.sh  publish-release.sh  release.sh  update-version.sh  validate-version.sh  verify-release-tag.sh
skills/ocm-operator/: SKILL.md
skills/ocm-operator/agents/: openai.yaml
skills/ocm-operator/references/: command-cookbook.md  local-paths.md  safety-and-state.md
skills/openclaw-release-validation/: SKILL.md
skills/openclaw-release-validation/agents/: openai.yaml
skills/openclaw-release-validation/references/: release-validation-paths.md
src/: archive.rs  cli.rs  download.rs  execution.rs  host.rs  lib.rs  logs.rs  main.rs  managed_node.rs  migrate.rs  openclaw_repo.rs  paths.rs  releases.rs  runner.rs  services.rs  shell.rs  store.rs  types.rs
src/cli/: dev.rs  doctor.rs  env.rs  help.rs  init.rs  internal.rs  launcher.rs  logs.rs  manifest.rs  migrate.rs  mod.rs  release.rs  runtime.rs  self_cmd.rs  service.rs  setup.rs  start.rs  supervisor.rs  sync.rs  up.rs  upgrade.rs
src/cli/render/: doctor.rs  env.rs  help.rs  launcher.rs  logs.rs  manifest.rs  migrate.rs  mod.rs  release.rs  runtime.rs  self_update.rs  service.rs  supervisor.rs  upgrade.rs
src/env/: binding.rs  execution.rs  health.rs  inspect.rs  lifecycle.rs  mod.rs  snapshots.rs  source_watch.rs  types.rs
src/infra/: archive.rs  download.rs  mod.rs  shell.rs  sqlite_snapshot.rs  terminal.rs
src/launcher/: mod.rs  registry.rs  resolution.rs  types.rs
src/manifest/: apply.rs  discovery.rs  mod.rs  plan.rs  reconcile.rs  resolution.rs
src/runtime/: install.rs  launch.rs  mod.rs  registry.rs  releases.rs  types.rs  verify.rs
src/service/: inspect.rs  manage.rs  mod.rs  platform.rs
src/services/: environments.rs  launchers.rs  runtimes.rs
src/store/: common.rs  environments.rs  envs.rs  gateway_ports.rs  launchers.rs  layout.rs  mod.rs  openclaw_config.rs  openclaw_state.rs  openclaw_workspaces.rs  prune.rs  runtimes.rs  snapshots.rs  upgrade_history.rs
src/supervisor/: mod.rs  openclaw_handoff.rs
tests/: behavior_flow_tests.rs  behavior_safety_tests.rs  bin_wrapper_tests.rs  cli_invocation_tests.rs  cli_validation_tests.rs  daemon_runtime_tests.rs  dev_command_tests.rs  doctor_command_tests.rs  download_tests.rs  env_archive_safety_tests.rs  env_cleanup_tests.rs  env_clone_tests.rs  env_destroy_tests.rs  env_doctor_tests.rs  env_export_tests.rs  env_import_tests.rs  env_output_tests.rs  env_repair_tests.rs  env_resolve_tests.rs  env_snapshot_safety_tests.rs  env_snapshot_tests.rs  env_status_tests.rs  execution_tests.rs  install_script_tests.rs  launcher_alias_tests.rs  launcher_binding_tests.rs  launcher_command_tests.rs  launcher_help_tests.rs  list_output_tests.rs  logs_command_tests.rs  manifest_apply_tests.rs  manifest_command_tests.rs  manifest_reconcile_tests.rs  migrate_command_tests.rs  path_tests.rs  progress_output_tests.rs  release_asset_tests.rs  release_command_tests.rs  release_manifest_tests.rs  release_script_tests.rs  (+18 more)
tests/support/: mod.rs
