[package]
name = "ocm"
version = "0.2.8"
edition = "2024"
rust-version = "1.85"
description = "OpenClaw Manager: the local control plane for isolated OpenClaw environments, launchers, runtimes, and services."
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/shakkernerd/ocm"
homepage = "https://github.com/shakkernerd/ocm"
keywords = ["openclaw", "cli", "manager", "environment", "service"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
base64 = "0.22"
flate2 = "1.1"
tar = "0.4"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
ureq = { version = "3.3", default-features = false, features = ["rustls"] }
indicatif = { version = "0.18", default-features = false, features = ["unicode-width"] }
unicode-width = "0.2"
terminal_size = "0.4"
dialoguer = { version = "0.12", default-features = false }
zip = { version = "8.5", default-features = false, features = ["deflate"] }
ctrlc = "3.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
